# taipy

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
src/classes/: mod.rs
src/typycheck/: mod.rs  utils.rs
tests/: main.py
tests/src/: test_basic_types_1.py  test_basic_types_2.py  test_basic_types_3.py
ty_py/: main.py
typycheck/: main.py
