[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ty-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = ["typer[all]"]


[project.scripts]
ty-py = "ty_py.main:app"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ty_py.rust"
