[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "typycheck"
keywords = [
    "type-checking",
    "type-hints",
    "type-annotations",
    "mypy",
    "pyright",
    "pytype",
    "pyre",
    "rust",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = ["typer[all]"]


[project.scripts]
typycheck = "typycheck.main:app"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "typycheck.rust"
